--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -1,6 +1,8 @@
 {% load i18n rules navigation %}
 <ul class="nav navbar-nav pull-right">
+{% if request.current_events.qualification.is_active %}
   <li class="{% active '^/contest/' %}"><a href="{% url 'contest:qualification_summary' request.current_edition.year %}">{% trans "Participate" %}</a></li>
+{% endif %}
   <li class="{% active '^/about/' %}"><a href="{% url 'pages:about-contest' %}">{% trans "Discover" %}</a></li>
   <li class="{% active '^/train/' %}"><a href="{% url 'training:index' %}">{% trans "Train" %}</a></li>
   <li class="{% active '^/archives/' %}"><a href="{% url 'archives:index' %}">{% trans "Archives" %}</a></li>
