css: problem level progress bar color & label positionning

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -471,10 +471,13 @@ footer .legal {
   max-width: 220px;
 }
 
+.problem .progress-bar {
+  background-color: #63a0d4;
+  text-align: left;
+}
+
 .progress-bar-fixed {
-  position: absolute;
-  left: 5px;
-  text-shadow: 0 0 2px rgba(255, 255, 255, 0.9);
+  padding: 0 4px;
 }
 
 .prologin-winner > i.fa {
