--- a/prologin/homepage/static/css/homepage.css
+++ b/prologin/homepage/static/css/homepage.css
@@ -189,6 +189,7 @@
   padding: 0.7em 1em;
   background: #fff;
   border-radius: 3px;
+  color: #333;
 }
 .checklist > li > a,
 .checklist > li > a:visited {
