mailing: semifinales: use simple signature

--- a/prologin/mailing/templates/mailing/semifinal_not_qualified.body.text.html
+++ b/prologin/mailing/templates/mailing/semifinal_not_qualified.body.text.html
@@ -21,11 +21,5 @@ Nous restons à ta disposition pour toutes questions. N'hésite pas
 Le président, Alexandre Bonnetain.
 
 -- 
-----------------------------------------------------------------------
-                             * Prologin *
-                 Le Concours National d'Informatique
-        14-16 rue Voltaire - 94270 Le Kremlin-Bicêtre - France
-          association@prologin.org - https://prologin.org
-       https://twitter.com/prologin - https://facebook.com/prologin
-----------------------------------------------------------------------
+L'équipe Prologin
 {% endautoescape %}{% endspaceless %}
