--- a/prologin/mailing/templates/mailing/semifinal_qualified.body.text.html
+++ b/prologin/mailing/templates/mailing/semifinal_qualified.body.text.html
@@ -55,11 +55,5 @@ Toutes nos félicitations, et à très bientôt !
 Le président, Alexandre Bonnetain.
 
 -- 
-----------------------------------------------------------------------
-                             * Prologin *
-                 Le Concours National d'Informatique
-        14-16 rue Voltaire - 94270 Le Kremlin-Bicêtre - France
-          association@prologin.org - https://prologin.org
-       https://twitter.com/prologin - https://facebook.com/prologin
-----------------------------------------------------------------------
+L'équipe Prologin
 {% endautoescape %}{% endspaceless %}
