documents: big refactor & cleanup; implement multi-PDF compilations

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -466,6 +466,12 @@ footer .legal {
   padding: 1em;
 }
 
+.pager li.active > a {
+  background-color: #337ab7;
+  color: white;
+  border-color: transparent;
+}
+
 .sponsor {
   width: 100%;
   max-width: 220px;
