--- a/prologin/homepage/templates/homepage/jumbotron-final.html
+++ b/prologin/homepage/templates/homepage/jumbotron-final.html
@@ -21,8 +21,7 @@
                 <li><i class="fa fa-calendar-check-o fa-fw"></i> {{ event.date_begin|date:"d b Y" }}</li>
               </ul>
               <p>
-                {# TODO: convocation button #}
-                <a href="{% url 'training:index' %}" class="btn btn-primary btn-block">
+                <a href="{% url 'documents:final-contestant-compilation' edition.year contestant.pk %}" class="btn btn-primary btn-block">
                   <i class="fa fa-download"></i> {% trans "Download paperwork" %}
                 </a>
               </p>
