--- a/prologin/contest/templates/correction/contestant-qualification.html
+++ b/prologin/contest/templates/correction/contestant-qualification.html
@@ -50,6 +50,20 @@
     $(function () {
       // Quiz active labels
       $('.propositions').inputToLabels({checkedClass: 'checked'});
+
+      // Assignation from wishes
+      var $assignation_event_select = $('select[name="assignation_semifinal_event"]');
+      var $assignation_select = $('select[name="assignation_semifinal"]');
+      $('.event-wish-list li').click(function(e) {
+        e.preventDefault();
+        var $this = $(this), event_id = $this.attr('data-event-id');
+        $assignation_select.val({% choiceenum_member 'contest.models.Assignation.assigned' 'value' %}).addClass('flash');
+        $assignation_event_select.val(event_id).addClass('flash');
+        setTimeout(function() {
+          $assignation_select.removeClass('flash');
+          $assignation_event_select.removeClass('flash');
+        }, 1000);
+      })
     });
   </script>
 {% endblock %}
